# vocal-score-converter

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh
.devcontainer/mfa/: devcontainer.json
.devcontainer/stable-ts/: devcontainer.json
.devcontainer/whisper-x/: devcontainer.json
scripts/: mfa.sh
songs/: .gitignore
vocal_score_converter/: lyrics_splitter.py
vocal_score_converter/mfa/: textgrid_handler.py
vocal_score_converter/my_stable-ts/: comparision.py  main.py  mute_audio.py
vocal_score_converter/my_whisperx/: my_whisperx.py  only_alignment.py  save_alignment_results.py
