[tool.poetry]
name = "vocal-score-converter"
version = "0.1.0"
description = ""
authors = ["t-chito <published.address.of.k.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
