[tool.poetry]
name = "vocal-score-converter"
version = "0.1.0"
description = ""
authors = ["t-chito <published.address.of.k.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pronouncing = "^0.2.0" # 使うのやめた。
setuptools = "^70.0.0" # エラー回避のため (pronouncing 使ってないからいらない？)
pyphen = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
